--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a href="#footer" class="nav-link">Contact</a>
+                <a href="#footer" class="nav-link" style="color: white;">Contact</a>
               </li>
               <li class="nav-item">
-                <a href="#pricing" class="nav-link">Donate</a>
+                <a href="#pricing" class="nav-link"  style="color: white;">Donate</a>
               </li>
               <li class="nav-item">
-                <a href="#cta" class="nav-link">Join Us!</a>
+                <a href="#cta" class="nav-link" style="color: white;">Join Us!</a>
               </li>
             </ul>
           </div>
